Corrected button stacking and hover transition on mobile layouts

--- a/src/components/cta.module.css
+++ b/src/components/cta.module.css
@@ -98,8 +98,17 @@ a.button:last-of-type:hover {
     margin-left: auto;
     margin-right: auto;
   }
+  .singleButton {
+    width: 100%;
+  }
   a.button:last-of-type {
     margin-left: 0;
     margin-top: 18px;
+  }
+  a.button {
+    margin-left: 0 !important;
+  }
+  a.button:hover {
+    margin-left: 3px !important ;
   }
 }
