--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -346,4 +346,8 @@ hr {
   .control textarea::placeholder {
     font-size: 14px;
   }
+  .ctaSingleButton {
+    width: 100%;
+    margin: 0;
+  }
 }
