--- a/src/pages/donate.module.css
+++ b/src/pages/donate.module.css
@@ -6,3 +6,10 @@
 .lead p {
   margin-bottom: 24px;
 }
+
+@media only screen and (max-width: 960px) {
+  .lead {
+    width: 100%;
+    max-width: 580px;
+  }
+}
